dist/recipes/Service.tandoor.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: recipes
  name: tandoor
  namespace: recipes
spec:
  externalIPs: []
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    cdk8s.io/metadata.addr: tandoor-deploy-c893d1df
  type: ClusterIP
